[package]
name = "memo"
version = "0.1.0"
authors = ["Ayato Tokubi <tokubi.ayato@gmail.com>"]
edition = "2018"
description = "very minimal symple cli for noting something"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
